# django-suit

./: pyproject.toml
