[tool.poetry]
name = "django-suit"
version = "2.0beta3"
description = "Modern theme for Django admin interface."
authors = ["Kaspars Sprogis (darklow) <info@djangosuit.com>"]
license = "Free for non-commercial use"
readme = "README.rst"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Framework :: Django',
    'License :: Free for non-commercial use',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Environment :: Web Environment',
    'Topic :: Software Development',
    'Topic :: Software Development :: User Interfaces',
]
packages=[
    { include = 'suit'},
#    { include = 'suit.templatetags' }
]

[tool.poetry.dependencies]
python = "^3.8"
#Django = ">=3.2.5"

[tool.poetry.dev-dependencies]
Sphinx = "1.3.5"
sphinx-rtd-theme = "0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
